--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.15.2",
+    "f-render": "^4.12.3",
+    "normalize.css": "^8.0.1",
+    "vue": "^2.6.11",
+    "vue-ele-form": "^0.8.56"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
